--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
 
     <!-- Conteudo Principal -->
         <!-- primeiro banner -->
-        <div>
-            <img width="100%" src="assets/images/Angra Tech - Cabeçalho Sympla.png" alt="Empreendedorismo, tecnologia e inovação">
-        </div>
+            <div>
+                <img width="100%" src="assets/images/Angra Tech - Cabeçalho Sympla.png" alt="Empreendedorismo, tecnologia e inovação">
+            </div>
         <!-- texto Principal -->
             <div class="fundo-imagem">
                 <div class="idHolder" id="sobre"></div> <!-- segura o id para mapeamento da pagina -->
@@ -61,76 +61,39 @@
                 </div>
             </div>
         <!-- Palestrantes -->
-            <div class="margem-lado texto">
+            <div class="margem-ladoP texto">
                 <div class="idHolderB" id="palestra"></div> <!-- segura o id para mapeamento da pagina -->
                 <div class="centro">
                     <h2 class="gradient-text margem-baixo">PALESTRANTES</h2>
                 </div>
-                <div class="respBox centro">
+                <div class="respBoxP centro">
                     <div class="contact-card respItemIcon"><!-- Novo div dos palestrantes -->
                         <div class="card-image">
-                            <img src="assets/images/blank.png" alt="palestrante">
+                            <img src="assets/images/beatriz.jpeg" alt="palestrante">
                             <div class="centro">
-                                <p class="gradient-text bold" >Palestrante</p>
+                                <p class="gradient-text bold" >Beatriz Mattiuzzo</p>
                             </div>
                         </div>
                         <div class="card-text">
-                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nihil sit deserunt, mollitia pariatur excepturi distinctio nemo doloribus dolor, necessitatibus commodi eos.</p>
+                            <p>
+                                Beatriz Mattiuzzo é oceanógrafa, mestre em Desenvolvimento Sustentável e empreendedora social, tendo fundado a Marulho.
+                                A Marulho é um negocio socioambiental que atua em Ilha Grande e transforma redes de pesca em novos produtos como bolsas e sacolas, evitando a pesca fantasma e gerando renda em comunidades caiçaras. Acelerada pela Fundação Grupo Boticário, atua nos modelos B2B e B2C,  voltado para sustentabilidades e economia do mar. Maiores Informações no site <a href="https://fazermarulho.com.br/">fazermarulho</a>
+                            </p>
                         </div>
                     </div>
                     <div class="contact-card respItemIcon"><!-- Novo div dos palestrantes -->
                         <div class="card-image">
-                            <img src="assets/images/blank.png" alt="palestrante">
+                            <img src="assets/images/paulo.jpeg" alt="palestrante">
                             <div class="centro">
-                                <p class="gradient-text bold" >Palestrante</p>
+                                <p class="gradient-text bold" >Paulo Kendzerski</p>
                             </div>
                         </div>
                         <div class="card-text">
-                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nihil sit deserunt, mollitia pariatur excepturi distinctio nemo doloribus dolor, necessitatibus commodi eos.</p>
-                        </div>
-                    </div>
-                    <div class="contact-card respItemIcon"><!-- Novo div dos palestrantes -->
-                        <div class="card-image">
-                            <img src="assets/images/blank.png" alt="palestrante">
-                            <div class="centro">
-                                <p class="gradient-text bold" >Palestrante</p>
-                            </div>
-                        </div>
-                        <div class="card-text">
-                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nihil sit deserunt, mollitia pariatur excepturi distinctio nemo doloribus dolor, necessitatibus commodi eos.</p>
-                        </div>
-                    </div>
-                    <div class="contact-card respItemIcon"><!-- Novo div dos palestrantes -->
-                        <div class="card-image">
-                            <img src="assets/images/blank.png" alt="palestrante">
-                            <div class="centro">
-                                <p class="gradient-text bold" >Palestrante</p>
-                            </div>
-                        </div>
-                        <div class="card-text">
-                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nihil sit deserunt, mollitia pariatur excepturi distinctio nemo doloribus dolor, necessitatibus commodi eos.</p>
-                        </div>
-                    </div>
-                    <div class="contact-card respItemIcon"><!-- Novo div dos palestrantes -->
-                        <div class="card-image">
-                            <img src="assets/images/blank.png" alt="palestrante">
-                            <div class="centro">
-                                <p class="gradient-text bold" >Palestrante</p>
-                            </div>
-                        </div>
-                        <div class="card-text">
-                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nihil sit deserunt, mollitia pariatur excepturi distinctio nemo doloribus dolor, necessitatibus commodi eos.</p>
-                        </div>
-                    </div>
-                    <div class="contact-card respItemIcon"><!-- Novo div dos palestrantes -->
-                        <div class="card-image">
-                            <img src="assets/images/blank.png" alt="palestrante">
-                            <div class="centro">
-                                <p class="gradient-text bold" >Palestrante</p>
-                            </div>
-                        </div>
-                        <div class="card-text">
-                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nihil sit deserunt, mollitia pariatur excepturi distinctio nemo doloribus dolor, necessitatibus commodi eos.</p>
+                            <p>
+                                O Instituto da Transformação Digital, entidade sem fins lucrativos, tem como missão, mobilizar, sensibilizar e promover iniciativas que contribuam para que a sociedade compreenda como a Transformação Digital e a Inovação podem estimular o desenvolvimento social, econômico e sustentável dos negócios, sejam tradicionais ou não. 
+                                O ITD desenvolve estudos de Maturidade Digital das empresas, a partir de uma metodologia inédita e exclusiva, com o objetivo de proporcionar informações para que seus líderes e gestores, possam implementar de forma mais eficiente a Transformação Digital necessária para alavancar os negócios das suas marcas. 
+                                O ITD é composto por um time de especialistas experientes com grande conhecimento do segmento que atuam, para atender todos os tipos de projetos de transformação dos negócios, independente do porte ou segmento, e atende empresas no Brasil, México e Espanha.
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -212,30 +175,30 @@
                 <hr width="100%">
             </div>
     <!--footer-->
-    <div class="texto centro">
-        <div class="responsiveBox">
-            <div class="responsiveItem">
-                <p class="centro">REALIZAÇÃO</p>
-                <br>
-                <img width="100%" src="assets/images/prefeituraBlack.png" alt="">
-            </div>
-            <div class="responsiveItem3 centro">
-                <ul class="centro">
-                    <li>REDES SOCIAIS</li>
+        <div class="texto centro">
+            <div class="responsiveBox">
+                <div class="responsiveItem">
+                    <p class="centro">REALIZAÇÃO</p>
                     <br>
-                    <li>
-                        <a href="#"><i class="fa fa-camera-retro"></i></a>
-                    </li>
-                    <li>
-                        <a href="#"><i class="fa fa-envelope"></i></a>
-                    </li>
-                </ul>
+                    <img width="100%" src="assets/images/prefeituraBlack.png" alt="">
+                </div>
+                <div class="responsiveItem3 centro">
+                    <ul class="centro">
+                        <li>REDES SOCIAIS</li>
+                        <br>
+                        <li>
+                            <a href="#"><i class="fa fa-camera-retro"></i></a>
+                        </li>
+                        <li>
+                            <a href="#"><i class="fa fa-envelope"></i></a>
+                        </li>
+                    </ul>
+                </div>
             </div>
+            <span>
+                <p class="centro">(24)-3377-4507<i class="fa fa-phone"></i> / des.economico@angra.rj.gov.br<i class="fa fa-envelope"></i></p>
+            </span>
         </div>
-        <span>
-            <p class="centro">(24)-3377-4507<i class="fa fa-phone"></i> / des.economico@angra.rj.gov.br<i class="fa fa-envelope"></i></p>
-        </span>
-    </div>
     <br>
     <script src="app.js"></script>
 </body>
