--- a/index.html
+++ b/index.html
@@ -151,29 +151,44 @@
                 </div>
                 <br><br>
             </div>
-        <!-- colaboradores -->
+        <!-- Patrocinadores -->
             <div class="margem-lado texto">
                 <div class="idHolderB" id="apoio"></div> <!-- segura o id para mapeamento da pagina -->
                 <div class="centro">
-                    <h2 class="gradient-text margem-baixo">STARTUPS DO NOSSO ECOSSISTEMA</h2>
+                    <h2 class="gradient-text margem-baixo">Patrocinadores</h2>
                 </div>
                 <div class="respBox">
                     <div class="respItemLogo">
-                        <img width="100%" height="80%" src="assets/images/KM Cash - Logotipo para fundo escuro.png" alt="">
+                        <img width="100%" height="100%" src="assets/images/topocart.jpeg" alt="">
                     </div>
                     <div class="respItemLogo">
-                        <img width="100%" height="80%" src="assets/images/papaFood.png" alt="">
-                    </div>
-                    <div class="respItemLogo">
-                        <img width="100%" height="80%" src="assets/images/inocolum.png">
-                    </div>
-                    <div class="respItemLogo" style="margin-top: -7px;">
-                        <img width="100%" height="100%" src="assets/images/SafeSpeedSystem-logo-transp-branca.png">
+                        <img width="100%" height="200%" style="margin-top: -50px;" src="assets/images/rjnet.jpeg" alt="">
                     </div>
                 </div>
-                <br><br><br><br><br><br>
-                <hr width="100%">
+                <br><br><br>
             </div>
+        <!-- colaboradores -->
+        <div class="margem-lado texto">
+            <div class="centro">
+                <h2 class="gradient-text margem-baixo">STARTUPS DO NOSSO ECOSSISTEMA</h2>
+            </div>
+            <div class="respBox">
+                <div class="respItemLogo">
+                    <img width="100%" height="80%" src="assets/images/KM Cash - Logotipo para fundo escuro.png" alt="">
+                </div>
+                <div class="respItemLogo">
+                    <img width="100%" height="80%" src="assets/images/papaFood.png" alt="">
+                </div>
+                <div class="respItemLogo">
+                    <img width="100%" height="80%" src="assets/images/inocolum.png">
+                </div>
+                <div class="respItemLogo" style="margin-top: -7px;">
+                    <img width="100%" height="100%" src="assets/images/SafeSpeedSystem-logo-transp-branca.png">
+                </div>
+            </div>
+            <br><br><br><br><br><br>
+            <hr width="100%">
+        </div>
     <!--footer-->
         <div class="texto centro">
             <div class="responsiveBox">
