--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                         <img id="img4" width="100%" height="100%"  src="assets/images/topocart.jpeg" alt="">
                     </div>
                     <div class="respItemLogo">
-                        <img width="100%" height="200%" style="margin-top: -50px;" src="assets/images/rjnet.jpeg" alt="">
+                        <img width="140%" height="140%" style="margin-top: -20px; margin-left: -30px" src="assets/images/rjnet.jpeg" alt="">
                     </div>
                 </div>
                 <br><br><br>
