--- a/index.html
+++ b/index.html
@@ -51,9 +51,8 @@
                     <br>
                     <p> Quem afirmaria, ser possível realizar uma consulta médica ou até mesmo uma cirurgia remotamente utilizando robôs, a tecnologia nos favorece nesse aspecto. São inúmeros problemas a serem solucionados, nos dando a oportunidade de criar negócios inovadores com alto poder de crescimento. Percebemos que para empreender nessa nova era, precisamos compreender como tudo isso funciona, e criar parcerias com negócios inovadores, mais do que nunca, precisamos nos conectar.</p>
                     <br>
-                    <p> Pensando nessa proposta, promoveremos nos dias 1 e 2 de dezembro, das 9h às 19h o I Angra Tech, com atividades, espaços e exposições, trazendo para Angra dos Reis a cultura de Empreendedorismo e Inovação com muita Tecnologia.</p>
+                    <p> Pensando nessa proposta, promoveremos nos dias 30 de novembro e 1 de dezembro, das 9h às 19h o I Angra Tech, com atividades, espaços e exposições, trazendo para Angra dos Reis a cultura de Empreendedorismo e Inovação com muita Tecnologia.</p>
                     <br>
-                    <p> O presente Manual tem o objetivo de orientar sua participação no primeiro Angra Tech que se realizará no Centro de Estudos Ambientais (CEA).</p>
                     <br>
                     <!-- 
                         <p> Caso surjam dúvidas sobre quaisquer assuntos, solicitamos a gentileza de nos contactar: Email des.economico@angra.rj.gov.br Telefone 24 3377-4507. Atenciosamente Comissão Organizadora</p>
@@ -202,16 +201,17 @@
                         <li>REDES SOCIAIS</li>
                         <br>
                         <li>
-                            <a href="#"><i class="fa fa-camera-retro"></i></a>
+                            <a href="https://www.instagram.com/angratech2022/"><i class="fa fa-camera-retro fa-2x"></i></a>
                         </li>
                         <li>
-                            <a href="#"><i class="fa fa-envelope"></i></a>
+                            <a href="mailto:des.economico@angra.rj.gov.br"><i class="fa fa-envelope fa-2x"></i></a>
                         </li>
                     </ul>
                 </div>
             </div>
             <span>
-                <p class="centro">(24)-3377-4507<i class="fa fa-phone"></i> / des.economico@angra.rj.gov.br<i class="fa fa-envelope"></i></p>
+                
+                <p class="centro">(24)-3377-4507<i class="fa fa-phone"></i> / <a href="mailto:des.economico@angra.rj.gov.br">des.economico@angra.rj.gov.br</a><i class="fa fa-envelope"></i></p>
             </span>
         </div>
     <br>
