--- a/index.html
+++ b/index.html
@@ -185,6 +185,36 @@
                     <img width="100%" height="100%" src="assets/images/SafeSpeedSystem-logo-transp-branca.png">
                 </div>
             </div>
+            <br><br><br>
+        </div>
+        <!-- convidados -->
+        <div class="margem-lado texto">
+            <div class="centro">
+                <h2 class="gradient-text margem-baixo">STARTUPS CONVIDADAS</h2>
+            </div>
+            <div class="respBox">
+                <div class="respItemLogo">
+                    <img width="100%" height="80%" src="assets/images/ifriend.png" alt="">
+                </div>
+                <div class="respItemLogo">
+                    <img width="140%" height="100%" style="margin-top: -20px; margin-left: -30px" src="assets/images/barco.png" alt="">
+                </div>
+                <div class="respItemLogo">
+                    <img width="140%" height="100%" style="margin-top: -20px; margin-left: -30px" src="assets/images/du4o.png" alt="">
+                </div>
+                <div class="respItemLogo">
+                    <img width="100%" height="80%" src="assets/images/barilink.png" alt="">
+                </div>
+                <div class="respItemLogo">
+                    <img width="100%" height="80%" src="assets/images/4tuna.png" alt="">
+                </div>
+                <div class="respItemLogo">
+                    <img width="100%" height="80%" src="assets/images/innomaker.png" alt="">
+                </div>
+                <div class="respItemLogo">
+                    <img width="100%" height="80%" src="assets/images/orbit.png" alt="">
+                </div>
+            </div>
             <br><br><br><br><br><br>
             <hr width="100%">
         </div>
