--- a/index.html
+++ b/index.html
@@ -88,6 +88,22 @@
             <div class="contact-card respItemIcon">
                 <!-- Novo div dos palestrantes -->
                 <div class="card-image">
+                    <img src="assets/images/WhatsApp Image 2022-10-28 at 15.48.48.jpeg" alt="palestrante">
+                    <div class="centro">
+                        <p class="gradient-text bold">Ana Carolina</p>
+                    </div>
+                </div>
+                <div class="card-text">
+                    <p>
+                        A Liv Coworking foi fundada por Ana Carolina Rocha Magalhães em 2018, inicialmente era um espaço destinado apenas à profissionais da área de saúde, porém, em 2020 com a expansão do espaço, o público alvo também foi ampliado, tendo como clientes, advogados,
+                        contadores, arquitetos, entre outros. Hoje, no mercado há quase 4 anos, a Liv Coworking conta com aproximadamente 80 colaboradores e ainda pretende expandir muito mais. No Angra Tech, a empreendedora vem para nos contar suas experiências
+                        e como fez para estruturar seu negócio.
+                    </p>
+                </div>
+            </div>
+            <div class="contact-card respItemIcon">
+                <!-- Novo div dos palestrantes -->
+                <div class="card-image">
                     <img src="assets/images/paulo.jpeg" alt="palestrante">
                     <div class="centro">
                         <p class="gradient-text bold">Paulo Kendzerski</p>
@@ -97,11 +113,11 @@
                     <p>
                         O Instituto da Transformação Digital, entidade sem fins lucrativos, tem como missão, mobilizar, sensibilizar e promover iniciativas que contribuam para que a sociedade compreenda como a Transformação Digital e a Inovação podem estimular o desenvolvimento
                         social, econômico e sustentável dos negócios, sejam tradicionais ou não. O ITD desenvolve estudos de Maturidade Digital das empresas, a partir de uma metodologia inédita e exclusiva, com o objetivo de proporcionar informações para
-                        que seus líderes e gestores, possam implementar de forma mais eficiente a Transformação Digital necessária para alavancar os negócios das suas marcas. O ITD é composto por um time de especialistas experientes com grande conhecimento
-                        do segmento que atuam, para atender todos os tipos de projetos de transformação dos negócios, independente do porte ou segmento, e atende empresas no Brasil, México e Espanha.
+                        que seus líderes e gestores, possam implementar de forma mais eficiente a Transformação Digital necessária para alavancar os negócios das suas marcas.
                     </p>
                 </div>
             </div>
+
         </div>
         <br><br>
     </div>
@@ -256,17 +272,15 @@
                     <li>REDES SOCIAIS</li>
                     <br>
                     <li>
-                        <a href="https://www.instagram.com/angratech2022/"><i class="fa fa-camera-retro fa-2x"></i></a>
-                    </li>
-                    <li>
-                        <a href="mailto:des.economico@angra.rj.gov.br"><i class="fa fa-envelope fa-2x"></i></a>
+                        <br>
+                        <a href="https://www.instagram.com/angratech2022/"><i class="fa fa-camera-retro fa-3x"></i></a>
                     </li>
                 </ul>
             </div>
         </div>
         <span>
                 
-                <p class="centro">(24)-3377-4507<i class="fa fa-phone"></i> / <a href="mailto:des.economico@angra.rj.gov.br">des.economico@angra.rj.gov.br</a><i class="fa fa-envelope"></i></p>
+                <p class="centro">(24)-3377-4507<i class="fa fa-phone"></i> / <a href="mailto:des.economico@angra.rj.gov.br">des.economico@angra.rj.gov.br</a></p>
             </span>
     </div>
     <br>
