--- a/index.html
+++ b/index.html
@@ -95,9 +95,11 @@
                 </div>
                 <div class="card-text">
                     <p>
-                        A Liv Coworking foi fundada por Ana Carolina Rocha Magalhães em 2018, inicialmente era um espaço destinado apenas à profissionais da área de saúde, porém, em 2020 com a expansão do espaço, o público alvo também foi ampliado, tendo como clientes, advogados,
-                        contadores, arquitetos, entre outros. Hoje, no mercado há quase 4 anos, a Liv Coworking conta com aproximadamente 80 colaboradores e ainda pretende expandir muito mais. No Angra Tech, a empreendedora vem para nos contar suas experiências
-                        e como fez para estruturar seu negócio.
+                        Ana Carolina, bacharel em Direito e fundadora da empresa Liv Coworking. 
+                        No mercado há quase 5 anos, a Liv foi fundada em 2018 e era destinada à apenas profissionais da área de saúde. Em 2020 com a expansão do espaço, o público alvo também foi ampliado, tendo como clientes advogados, contadores, empresas, entre outros
+                        Hoje a Liv coworking conta com 400 m², no centro de Angra dos Reis. Sendo o maior coworking da cidade e com extenso know how.
+                        A Liv nasceu para dar respostas, trazer facilidade e inovação.
+                        No Angra Tech, a empreendedora vem para nos contar suas experiências e como fez para estruturar seu negócio.
                     </p>
                 </div>
             </div>
