--- a/index.html
+++ b/index.html
@@ -78,13 +78,15 @@
                     </div>
                 </div>
                 <div class="card-text">
-                    <p>
-                        Beatriz Mattiuzzo é oceanógrafa, mestre em Desenvolvimento Sustentável e empreendedora social, tendo fundado a Marulho. A Marulho é um negocio socioambiental que atua em Ilha Grande e transforma redes de pesca em novos produtos como bolsas e sacolas,
-                        evitando a pesca fantasma e gerando renda em comunidades caiçaras. Acelerada pela Fundação Grupo Boticário, atua nos modelos B2B e B2C, voltado para sustentabilidades e economia do mar. Maiores Informações no site
-                        <a href="https://fazermarulho.com.br/">fazermarulho</a>
-                    </p>
+                    
+                    <table class="tabela">
+                        <tr>
+                            <td>30/11</td><td>  Marulho - Um negócio voltado para sustentabilidades e economia do mar</td>
+                        </tr>
+                    </table>
                 </div>
             </div>
+            <div class="separacao" id="s1"></div>
             <div class="contact-card respItemIcon">
                 <!-- Novo div dos palestrantes -->
                 <div class="card-image">
@@ -94,15 +96,14 @@
                     </div>
                 </div>
                 <div class="card-text">
-                    <p>
-                        Ana Carolina, bacharel em Direito e fundadora da empresa Liv Coworking. 
-                        No mercado há quase 5 anos, a Liv foi fundada em 2018 e era destinada à apenas profissionais da área de saúde. Em 2020 com a expansão do espaço, o público alvo também foi ampliado, tendo como clientes advogados, contadores, empresas, entre outros
-                        Hoje a Liv coworking conta com 400 m², no centro de Angra dos Reis. Sendo o maior coworking da cidade e com extenso know how.
-                        A Liv nasceu para dar respostas, trazer facilidade e inovação.
-                        No Angra Tech, a empreendedora vem para nos contar suas experiências e como fez para estruturar seu negócio.
-                    </p>
+                    <table class="tabela">
+                        <tr>
+                            <td>30/11</td><td>  Lorem ipsum dolor sit amet consectetur, adipisicing elit.</td>
+                        </tr>
+                    </table>
                 </div>
             </div>
+            <div class="separacao" id="s2"></div>
             <div class="contact-card respItemIcon">
                 <!-- Novo div dos palestrantes -->
                 <div class="card-image">
@@ -112,14 +113,34 @@
                     </div>
                 </div>
                 <div class="card-text">
-                    <p>
-                        O Instituto da Transformação Digital, entidade sem fins lucrativos, tem como missão, mobilizar, sensibilizar e promover iniciativas que contribuam para que a sociedade compreenda como a Transformação Digital e a Inovação podem estimular o desenvolvimento
-                        social, econômico e sustentável dos negócios, sejam tradicionais ou não. O ITD desenvolve estudos de Maturidade Digital das empresas, a partir de uma metodologia inédita e exclusiva, com o objetivo de proporcionar informações para
-                        que seus líderes e gestores, possam implementar de forma mais eficiente a Transformação Digital necessária para alavancar os negócios das suas marcas.
-                    </p>
+                    <table class="tabela">
+                        <tr>
+                            <td>30/11</td><td> Novos Modelos para negócios tradicionais</td>
+                        </tr>
+                        <tr>
+                            <td>01/12</td><td> Competências e Habilidades exigidas para o Profissional do futuro</td>
+                        </tr>
+                    </table>
                 </div>
             </div>
-
+            <div class="separacao" id="s3"></div>
+            <div class="contact-card respItemIcon">
+                <!-- Novo div dos palestrantes -->
+                <div class="card-image">
+                    <img src="assets/images/Emelin.jpg" alt="palestrante">
+                    <img src="assets/images/RicardoMarsili.jpeg" alt="palestrante">
+                    <div class="centro">
+                        <p class="gradient-text bold">Evelyn Castillo e Ricardo Marsili</p>
+                    </div>
+                </div>
+                <div class="card-text">
+                    <table class="tabela">
+                        <tr>
+                            <td>30/11</td><td> Metaverso a Mina de Ouro para os Negócios</td>
+                        </tr>
+                    </table>
+                </div>
+            </div>
         </div>
         <br><br>
     </div>
