--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                 <div class="card-text">
                     <table class="tabela">
                         <tr>
-                            <td>30/11</td><td>  Lorem ipsum dolor sit amet consectetur, adipisicing elit.</td>
+                            <td>30/11</td><td>Liv Coworking - Experiência de uma Empreendedora</td>
                         </tr>
                     </table>
                 </div>
