--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                     </table>
                 </div>
             </div>
-            <div class="separacao" id="s1"></div>
+            <!--<div class="separacao" id="s1"></div>-->
             <div class="contact-card respItemIcon">
                 <!-- Novo div dos palestrantes -->
                 <div class="card-image">
@@ -103,7 +103,7 @@
                     </table>
                 </div>
             </div>
-            <div class="separacao" id="s2"></div>
+            <!--<div class="separacao" id="s2"></div>-->
             <div class="contact-card respItemIcon">
                 <!-- Novo div dos palestrantes -->
                 <div class="card-image">
@@ -123,7 +123,7 @@
                     </table>
                 </div>
             </div>
-            <div class="separacao" id="s3"></div>
+            <!--<div class="separacao" id="s3"></div>-->
             <div class="contact-card respItemIcon">
                 <!-- Novo div dos palestrantes -->
                 <div class="card-image">
