adição de cards simplificados

--- a/index.html
+++ b/index.html
@@ -69,78 +69,33 @@
             <h2 class="gradient-text margem-baixo">PALESTRANTES</h2>
         </div>
         <div class="respBoxP centro">
+
+
             <div class="contact-card respItemIcon">
                 <!-- Novo div dos palestrantes -->
-                <div class="card-image">
-                    <img src="assets/images/beatriz.jpeg" alt="palestrante">
-                    <div class="centro">
-                        <p class="gradient-text bold">Beatriz Mattiuzzo</p>
-                    </div>
-                </div>
-                <div class="card-text">
-                    
-                    <table class="tabela">
-                        <tr>
-                            <td>30/11</td><td>  Marulho - Um negócio voltado para sustentabilidades e economia do mar</td>
-                        </tr>
-                    </table>
-                </div>
+                <img src="assets/images/cards/1.png" style="border-radius:20px;" width="100%" alt="palestrante">
             </div>
-            <!--<div class="separacao" id="s1"></div>-->
             <div class="contact-card respItemIcon">
                 <!-- Novo div dos palestrantes -->
-                <div class="card-image">
-                    <img src="assets/images/WhatsApp Image 2022-10-28 at 15.48.48.jpeg" alt="palestrante">
-                    <div class="centro">
-                        <p class="gradient-text bold">Ana Carolina</p>
-                    </div>
-                </div>
-                <div class="card-text">
-                    <table class="tabela">
-                        <tr>
-                            <td>30/11</td><td>Liv Coworking - Experiência de uma Empreendedora</td>
-                        </tr>
-                    </table>
-                </div>
+                <img src="assets/images/cards/2.png" style="border-radius:20px;" width="100%" alt="palestrante">
             </div>
-            <!--<div class="separacao" id="s2"></div>-->
             <div class="contact-card respItemIcon">
                 <!-- Novo div dos palestrantes -->
-                <div class="card-image">
-                    <img src="assets/images/paulo.jpeg" alt="palestrante">
-                    <div class="centro">
-                        <p class="gradient-text bold">Paulo Kendzerski</p>
-                    </div>
-                </div>
-                <div class="card-text">
-                    <table class="tabela">
-                        <tr>
-                            <td>30/11</td><td> Novos Modelos para negócios tradicionais</td>
-                        </tr>
-                        <tr>
-                            <td>01/12</td><td> Competências e Habilidades exigidas para o Profissional do futuro</td>
-                        </tr>
-                    </table>
-                </div>
+                <img src="assets/images/cards/3.png" style="border-radius:20px;" width="100%" alt="palestrante">
             </div>
-            <!--<div class="separacao" id="s3"></div>-->
             <div class="contact-card respItemIcon">
                 <!-- Novo div dos palestrantes -->
-                <div class="card-image">
-                    <img src="assets/images/Emelin.jpg" alt="palestrante">
-                    <img src="assets/images/RicardoMarsili.jpeg" alt="palestrante">
-                    <div class="centro">
-                        <p class="gradient-text bold">Evelyn Castillo e Ricardo Marsili</p>
-                    </div>
-                </div>
-                <div class="card-text">
-                    <table class="tabela">
-                        <tr>
-                            <td>30/11</td><td> Metaverso a Mina de Ouro para os Negócios</td>
-                        </tr>
-                    </table>
-                </div>
+                <img src="assets/images/cards/4.png" style="border-radius:20px;" width="100%" alt="palestrante">
             </div>
+            <div class="contact-card respItemIcon">
+                <!-- Novo div dos palestrantes -->
+                <img src="assets/images/cards/5.png" style="border-radius:20px;" width="100%" alt="palestrante">
+            </div>
+            <div class="contact-card respItemIcon">
+                <!-- Novo div dos palestrantes -->
+                <img src="assets/images/cards/6.png" style="border-radius:20px;" width="100%" alt="palestrante">
+            </div>
+
         </div>
         <br><br>
     </div>
