--- a/index.html
+++ b/index.html
@@ -95,7 +95,10 @@
                 <!-- Novo div dos palestrantes -->
                 <img src="assets/images/cards/6.png" style="border-radius:20px;" width="100%" alt="palestrante">
             </div>
-
+            <div class="contact-card respItemIcon">
+                <!-- Novo div dos palestrantes -->
+                <img src="assets/images/cards/7.png" style="border-radius:20px;" width="100%" alt="palestrante">
+            </div>
         </div>
         <br><br>
     </div>
@@ -232,6 +235,15 @@
             </div>
             <div class="respItemLogo">
                 <img width="100%" height="80%" src="assets/images/orbit.png" alt="">
+            </div>
+            <div class="respItemLogo">
+                <img width="100%" height="80%" src="assets/images/ukan.png" alt="">
+            </div>
+            <div class="respItemLogo">
+                <img width="85%" height="150%" style="margin-top: -30px; margin-left: 20px" src="assets/images/pinguim.png" alt="">
+            </div>
+            <div class="respItemLogo">
+                <img width="100%" height="160%" style="margin-top: -20px;" src="assets/images/ml.png" alt="">
             </div>
         </div>
         <br><br><br><br><br><br>
