--- a/index.html
+++ b/index.html
@@ -245,6 +245,10 @@
             <div class="respItemLogo">
                 <img width="100%" height="160%" style="margin-top: -20px;" src="assets/images/ml.png" alt="">
             </div>
+            <div class="contact-card respItemIcon">
+                <!-- Novo div dos palestrantes -->
+                <img src="assets/images/cards/8.jpeg" style="border-radius:20px;" width="100%" alt="palestrante">
+            </div>
         </div>
         <br><br><br><br><br><br>
         <hr width="100%">
