atualização de cards

--- a/index.html
+++ b/index.html
@@ -73,31 +73,31 @@
 
             <div class="contact-card respItemIcon">
                 <!-- Novo div dos palestrantes -->
-                <img src="assets/images/cards/1.png" style="border-radius:20px;" width="100%" alt="palestrante">
+                <img src="assets/images/cards/1.jpeg" style="border-radius:20px;" width="100%" alt="palestrante">
             </div>
             <div class="contact-card respItemIcon">
                 <!-- Novo div dos palestrantes -->
-                <img src="assets/images/cards/2.png" style="border-radius:20px;" width="100%" alt="palestrante">
+                <img src="assets/images/cards/2.jpeg" style="border-radius:20px;" width="100%" alt="palestrante">
             </div>
             <div class="contact-card respItemIcon">
                 <!-- Novo div dos palestrantes -->
-                <img src="assets/images/cards/3.png" style="border-radius:20px;" width="100%" alt="palestrante">
+                <img src="assets/images/cards/3.jpeg" style="border-radius:20px;" width="100%" alt="palestrante">
             </div>
             <div class="contact-card respItemIcon">
                 <!-- Novo div dos palestrantes -->
-                <img src="assets/images/cards/4.png" style="border-radius:20px;" width="100%" alt="palestrante">
+                <img src="assets/images/cards/4.jpeg" style="border-radius:20px;" width="100%" alt="palestrante">
             </div>
             <div class="contact-card respItemIcon">
                 <!-- Novo div dos palestrantes -->
-                <img src="assets/images/cards/5.png" style="border-radius:20px;" width="100%" alt="palestrante">
+                <img src="assets/images/cards/5.jpeg" style="border-radius:20px;" width="100%" alt="palestrante">
             </div>
             <div class="contact-card respItemIcon">
                 <!-- Novo div dos palestrantes -->
-                <img src="assets/images/cards/6.png" style="border-radius:20px;" width="100%" alt="palestrante">
+                <img src="assets/images/cards/6.jpeg" style="border-radius:20px;" width="100%" alt="palestrante">
             </div>
             <div class="contact-card respItemIcon">
                 <!-- Novo div dos palestrantes -->
-                <img src="assets/images/cards/7.png" style="border-radius:20px;" width="100%" alt="palestrante">
+                <img src="assets/images/cards/7.jpeg" style="border-radius:20px;" width="100%" alt="palestrante">
             </div>
             <div class="contact-card respItemIcon">
                 <!-- Novo div dos palestrantes -->
