--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" type="text/css" href="assets/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="assets/fontawesome-free-5.15.4-web/css/all.css">
+   
 </head>
 
 <body>
@@ -30,12 +31,13 @@
                 <div class="closeMenu"><i class="fa fa-times"></i></div>
             </ul>
         </nav>
+
     </header>
 
     <!-- Conteudo Principal -->
     <!-- primeiro banner -->
     <div>
-        <img width="100%" src="assets/images/Angra Tech - Cabeçalho Sympla.png" alt="Empreendedorismo, tecnologia e inovação">
+        <img width="100%" src="assets/images/Angra Tech - Cabeçalho Sympla.png" alt="Empreendedorismo, tecnologia e inovação, conexões experiencias e soluções para alavancar a economia. Evento nos dias 30 de novembroe 1 de dezembro">
     </div>
     <!-- texto Principal -->
     <div class="fundo-imagem">
@@ -73,35 +75,35 @@
 
             <div class="contact-card respItemIcon">
                 <!-- Novo div dos palestrantes -->
-                <img src="assets/images/cards/1.jpeg" style="border-radius:20px;" width="100%" alt="palestrante">
+                <img src="assets/images/cards/1.jpeg" style="border-radius:20px;" width="100%" alt="palestrante Carlos Rodrigo">
             </div>
             <div class="contact-card respItemIcon">
                 <!-- Novo div dos palestrantes -->
-                <img src="assets/images/cards/2.jpeg" style="border-radius:20px;" width="100%" alt="palestrante">
+                <img src="assets/images/cards/2.jpeg" style="border-radius:20px;" width="100%" alt="palestrante Paulo Kendzerski">
             </div>
             <div class="contact-card respItemIcon">
                 <!-- Novo div dos palestrantes -->
-                <img src="assets/images/cards/3.jpeg" style="border-radius:20px;" width="100%" alt="palestrante">
+                <img src="assets/images/cards/3.jpeg" style="border-radius:20px;" width="100%" alt="palestrante Andrei Dias">
             </div>
             <div class="contact-card respItemIcon">
                 <!-- Novo div dos palestrantes -->
-                <img src="assets/images/cards/4.jpeg" style="border-radius:20px;" width="100%" alt="palestrante">
+                <img src="assets/images/cards/4.jpeg" style="border-radius:20px;" width="100%" alt="palestrantes Evelin e Ricardo">
             </div>
             <div class="contact-card respItemIcon">
                 <!-- Novo div dos palestrantes -->
-                <img src="assets/images/cards/5.jpeg" style="border-radius:20px;" width="100%" alt="palestrante">
+                <img src="assets/images/cards/5.jpeg" style="border-radius:20px;" width="100%" alt="palestrante Beatriz Mattiuzzo">
             </div>
             <div class="contact-card respItemIcon">
                 <!-- Novo div dos palestrantes -->
-                <img src="assets/images/cards/6.jpeg" style="border-radius:20px;" width="100%" alt="palestrante">
+                <img src="assets/images/cards/6.jpeg" style="border-radius:20px;" width="100%" alt="palestrante Tiago Santos">
             </div>
             <div class="contact-card respItemIcon">
                 <!-- Novo div dos palestrantes -->
-                <img src="assets/images/cards/7.jpeg" style="border-radius:20px;" width="100%" alt="palestrante">
+                <img src="assets/images/cards/7.jpeg" style="border-radius:20px;" width="100%" alt="palestrante Paulo Kendzerski">
             </div>
             <div class="contact-card respItemIcon">
                 <!-- Novo div dos palestrantes -->
-                <img src="assets/images/cards/8.jpeg" style="border-radius:20px;" width="100%" alt="palestrante">
+                <img src="assets/images/cards/8.jpeg" style="border-radius:20px;" width="100%" alt="palestrante Ana carolina">
             </div>
         </div>
         <br><br>
@@ -181,13 +183,13 @@
         </div>
         <div class="respBox">
             <div class="respItemLogo">
-                <img width="100%" height="80%" src="assets/images/NEXAAS_LOGO_HORIZONTAL_AZUL.png" alt="">
+                <img width="100%" height="80%" src="assets/images/NEXAAS_LOGO_HORIZONTAL_AZUL.png" alt="Patrocinadores do envento">
             </div>
             <div class="respItemLogo">
-                <img id="img4" width="100%" height="100%" src="assets/images/topocart.jpeg" alt="">
+                <img id="img4" width="100%" height="100%" src="assets/images/topocart.jpeg" alt="Patrocinadores do envento">
             </div>
             <div class="respItemLogo">
-                <img width="140%" height="140%" style="margin-top: -20px; margin-left: -30px" src="assets/images/rjnet.jpeg" alt="">
+                <img width="140%" height="140%" style="margin-top: -20px; margin-left: -30px" src="assets/images/rjnet.jpeg" alt="Patrocinadores do envento">
             </div>
         </div>
         <br><br><br>
@@ -199,16 +201,16 @@
         </div>
         <div class="respBox">
             <div class="respItemLogo">
-                <img width="100%" height="80%" src="assets/images/KM Cash - Logotipo para fundo escuro.png" alt="">
+                <img width="100%" height="80%" src="assets/images/KM Cash - Logotipo para fundo escuro.png" alt="startups dp nosso ecossistema">
             </div>
             <div class="respItemLogo">
-                <img width="100%" height="80%" src="assets/images/papaFood.png" alt="">
+                <img width="100%" height="80%" src="assets/images/papaFood.png" alt="startups dp nosso ecossistema">
             </div>
             <div class="respItemLogo">
-                <img width="100%" height="80%" src="assets/images/inocolum.png">
+                <img width="100%" height="80%" src="assets/images/inocolum.png" alt="startups dp nosso ecossistema">
             </div>
             <div class="respItemLogo" style="margin-top: -7px;">
-                <img width="100%" height="100%" src="assets/images/SafeSpeedSystem-logo-transp-branca.png">
+                <img width="100%" height="100%" src="assets/images/SafeSpeedSystem-logo-transp-branca.png" alt="startups dp nosso ecossistema">
             </div>
         </div>
         <br><br><br>
@@ -220,34 +222,34 @@
         </div>
         <div class="respBox">
             <div class="respItemLogo">
-                <img width="100%" height="80%" src="assets/images/ifriend.png" alt="">
+                <img width="100%" height="80%" src="assets/images/ifriend.png" alt="logo de startups convidadas">
             </div>
             <div class="respItemLogo">
-                <img width="140%" height="100%" style="margin-top: -20px; margin-left: -30px" src="assets/images/barco.png" alt="">
+                <img width="140%" height="100%" style="margin-top: -20px; margin-left: -30px" src="assets/images/barco.png" alt="logo de startups convidadas">
             </div>
             <div class="respItemLogo">
-                <img width="140%" height="100%" style="margin-top: -20px; margin-left: -30px" src="assets/images/du4o.png" alt="">
+                <img width="140%" height="100%" style="margin-top: -20px; margin-left: -30px" src="assets/images/du4o.png" alt="logo de startups convidadas">
             </div>
             <div class="respItemLogo">
-                <img width="100%" height="80%" src="assets/images/barilink.png" alt="">
+                <img width="100%" height="80%" src="assets/images/barilink.png" alt="logo de startups convidadas">
             </div>
             <div class="respItemLogo">
-                <img width="100%" height="80%" src="assets/images/4tuna.png" alt="">
+                <img width="100%" height="80%" src="assets/images/4tuna.png" alt="logo de startups convidadas">
             </div>
             <div class="respItemLogo">
-                <img width="100%" height="80%" src="assets/images/innomaker.png" alt="">
+                <img width="100%" height="80%" src="assets/images/innomaker.png" alt="logo de startups convidadas">
             </div>
             <div class="respItemLogo">
-                <img width="100%" height="80%" src="assets/images/orbit.png" alt="">
+                <img width="100%" height="80%" src="assets/images/orbit.png" alt="logo de startups convidadas">
             </div>
             <div class="respItemLogo">
-                <img width="100%" height="80%" src="assets/images/ukan.png" alt="">
+                <img width="100%" height="80%" src="assets/images/ukan.png" alt="logo de startups convidadas">
             </div>
             <div class="respItemLogo">
-                <img width="85%" height="150%" style="margin-top: -30px; margin-left: 20px" src="assets/images/pinguim.png" alt="">
+                <img width="85%" height="150%" style="margin-top: -30px; margin-left: 20px" src="assets/images/pinguim.png" alt="logo de startups convidadas">
             </div>
             <div class="respItemLogo">
-                <img width="100%" height="160%" style="margin-top: -20px;" src="assets/images/ml.png" alt="">
+                <img width="100%" height="160%" style="margin-top: -20px;" src="assets/images/ml.png" alt="logo de startups convidadas">
             </div>
         </div>
         <br><br><br><br><br><br>
@@ -259,7 +261,7 @@
             <div class="responsiveItem">
                 <p class="centro">REALIZAÇÃO</p>
                 <br>
-                <img width="100%" src="assets/images/prefeituraBlack.png" alt="">
+                <img width="100%" src="assets/images/prefeituraBlack.png" alt="logo prefeitura">
             </div>
             <div class="responsiveItem3 centro">
                 <ul class="centro">
@@ -279,6 +281,16 @@
     </div>
     <br>
     <script src="app.js"></script>
+    <script src="https://plugin.handtalk.me/web/latest/handtalk.min.js"></script>
+	
+    <script>
+        var ht = new HT({
+            token: "7a92081e27daf17bd3b2efe277d0648c",
+            avatar: "MAYA",
+            pageSpeech: true,
+            maxTextSize: 1000
+         });
+</script>
 </body>
 
 </html>
